# File-Path-Extractor

./: Cargo.toml  README.md
file_scanner/: Cargo.toml
file_scanner/src/: main.rs
