[package]
name = "file_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.1", features = ["default"] }
walkdir = "2.4.0"
tokio = { version = "1.36.0", features = ["full"] }
indicatif = "0.17.7"
anyhow = "1.0.75"
chrono = "0.4.34"
csv = "1.3.0"
humansize = "2.1.3"
regex = "1.10.3"
rfd = "0.12.1"
winapi = { version = "0.3.9", features = ["winuser", "windef"] } 