[package]
name = "file_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
csv = "1.3.1"
eframe = { version = "0.31.1", features = ["default"] }
humansize = "2.1.3"
regex = "1.11.1"
rfd = "0.15.3"
tokio = { version = "1.45.0", features = ["full"] }
walkdir = "2.5.0"
